new idea, Ãuse email do login , update all Ãuser, remove Ãusername, Æwrite a little hÃelper.java for email